--- a/index.html
+++ b/index.html
@@ -7,18 +7,7 @@
     <title>Hassanambha computer services</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/fb88c996e1.js" crossorigin="anonymous"></script>
-    <style>
-      @media screen and (min-width: 900px) {
-        footer{
-          position: sticky;
-    bottom: 0;
-    z-index: 1020;
-        }
-      .info{
-        margin-left: 1.65em; display:flex; justify-content: space-between;
-      }  
-}
-    </style>
+    <link rel="stylesheet" href="./assets/css/index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </head>
   <body class="bg-info">
@@ -32,49 +21,49 @@
     <div class="card" style="width:21rem; display: inline-block; margin: 0 1rem .5rem 0;">
       <img src="./assets/images/download.jpeg" class="card-img-top" alt="Computer Services">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title">Computer Services</h5>
+        <p class="card-text"></p>
+        <a href="./assets/html/CS.html" class="btn btn-primary">More Details</a>
+      </div>
+    </div>
+    <div class="card" style="width:21rem; display: inline-block; margin: 0 1rem .5rem 0;">
+      <img src="./assets/images/CCTV.jpeg" class="card-img-top" alt="Computer Services">
+      <div class="card-body">
+        <h5 class="card-title">CCTV Instalation</h5>
+        <p class="card-text"></p>
+        <a href="./assets/html/CCTV.html" class="btn btn-primary">More Dtails</a>
+      </div>
+    </div>
+    <div class="card" style="width:21rem; display: inline-block; margin: 0 1rem .5rem 0;">
+      <img src="./assets/images/Printers.jpeg" class="card-img-top" alt="Computer Services">
+      <div class="card-body">
+        <h5 class="card-title">Printer Services</h5>
+        <p class="card-text"></p>
+        <a href="./assets/html/PS.html" class="btn btn-primary">More Details</a>
+      </div>
+    </div>
+    <div class="card" style="width:21rem; display: inline-block; margin: 0 1rem .5rem 0;">
+      <img src="./assets/images/WebDev.jpeg" class="card-img-top" alt="Computer Services">
+      <div class="card-body">
+        <h5 class="card-title">Developing Websites</h5>
+        <p class="card-text">Front End</p>
+        <a href="./assets/html/Web.html" class="btn btn-primary">More Details</a>
       </div>
     </div>
     <div class="card" style="width:21rem; display: inline-block; margin: 0 1rem .5rem 0;">
       <img src="./assets/images/download.jpeg" class="card-img-top" alt="Computer Services">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <p class="card-text"></p>
+        <a href="#" class="btn btn-primary">More Details</a>
       </div>
     </div>
     <div class="card" style="width:21rem; display: inline-block; margin: 0 1rem .5rem 0;">
       <img src="./assets/images/download.jpeg" class="card-img-top" alt="Computer Services">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
-    <div class="card" style="width:21rem; display: inline-block; margin: 0 1rem .5rem 0;">
-      <img src="./assets/images/download.jpeg" class="card-img-top" alt="Computer Services">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
-    <div class="card" style="width:21rem; display: inline-block; margin: 0 1rem .5rem 0;">
-      <img src="./assets/images/download.jpeg" class="card-img-top" alt="Computer Services">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
-    <div class="card" style="width:21rem; display: inline-block; margin: 0 1rem .5rem 0;">
-      <img src="./assets/images/download.jpeg" class="card-img-top" alt="Computer Services">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <p class="card-text"></p>
+        <a href="#" class="btn btn-primary">More Details</a>
       </div>
     </div>
     
