added network field

--- a/index.html
+++ b/index.html
@@ -51,21 +51,21 @@
       </div>
     </div>
     <div class="card" style="width:21rem; display: inline-block; margin: 0 1rem .5rem 0;">
+      <img src="./assets/images/networking.jpg" class="card-img-top" alt="Computer Services">
+      <div class="card-body">
+        <h5 class="card-title">Networking</h5>
+        <p class="card-text"></p>
+        <a href="./assets/html/Networking.html" class="btn btn-primary">More Details</a>
+      </div>
+    </div>
+    <!-- <div class="card" style="width:21rem; display: inline-block; margin: 0 1rem .5rem 0;">
       <img src="./assets/images/download.jpeg" class="card-img-top" alt="Computer Services">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text"></p>
         <a href="#" class="btn btn-primary">More Details</a>
       </div>
-    </div>
-    <div class="card" style="width:21rem; display: inline-block; margin: 0 1rem .5rem 0;">
-      <img src="./assets/images/download.jpeg" class="card-img-top" alt="Computer Services">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text"></p>
-        <a href="#" class="btn btn-primary">More Details</a>
-      </div>
-    </div>
+    </div> -->
     
   </main>
 
