--- a/assets/html/CS.html
+++ b/assets/html/CS.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="./assets/images/fevicon1.jpeg" type="image/icon type">
+    <link rel="icon" href="../images/fevicon1.jpeg" type="image/icon type">
     <title>Hassanambha computer services</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/fb88c996e1.js" crossorigin="anonymous"></script>
